asset/css/style.css
@font-face {
  font-family: "Transducer Test Regular";
  src: url("../fonts/TransducerTest-Regular-BF645c3dd843c3b.otf")
    format("opentype");
}

* {
  font-family: "Transducer Test Regular";
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* .hero{
    height: calc(100%-5%);
} */



#dropdown {
  transition: 0.5s ease-in-out;
}

html{
  scroll-behavior: smooth;
}

.hero {
  z-index: -1;
}
.hero-img {
  background-image: url("../img/hero-img.png");
  z-index: 4;
  background-repeat: no-repeat;
  background-size: 110% 100%;
}

.paintingBg {
  background: url(../img/service_paint.png), lightgray 50%;
  background-repeat: no-repeat;
  background-size: 110%;
}

/* video section css start  */

#video {
  position: absolute;
}

#logo2 {
  position: relative;
  top: 2.44rem;
  left: 2.53rem;
}
.play {
  position: absolute;
  position: relative;
  top: 30%;
  left: 0;
  bottom: 0;
  right: 0;
}

#ellipsImg {
  position: relative;
  top: 50%;
  left: 46%;
  bottom: 50%;
  right: 50%;
}

.playHidden {
  display: none;
}

#pollyImg {
  position: absolute;
  top: 40%;
  left: 49.3%;
  bottom: 50%;
  right: 50%;
}

/* video section css end */

.service-item {
  height: 28rem !important;
}

/* .services-slider{
  background-image: url(../img/artboard.png);
} */

#bg_right {
  position: relative;
}

#coma {
  position: absolute;
  right: 2rem;
}

/* .choose_head_text {
  position: relative;
} */

.choose_head_border {
  position: absolute;
  left: 0;
  top: 2rem;
}


#simulation {
  position: relative;
  text-align: center;
}

#simulation img {
  max-width: 100%;
  height: auto;
}

.simulation_text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
}


/* here started some utitlity classes  */
.container-general {
  width: 80%;
  margin: 0 auto;
}

.container-exceptional {
  width: 90%;
  margin-left: 10%;
}
/* here ended some utitlity classes  */



/* navbar css  */
/* since nested groupes are not supported we have to use 
     regular css for the nested dropdowns 
  */
  li>ul                 { transform: translatex(100%) scale(0) }
  li:hover>ul           { transform: translatex(101%) scale(1) }
  li > button svg       { transform: rotate(-90deg) }
  li:hover > button svg { transform: rotate(-270deg) }

  /* Below styles fake what can be achieved with the tailwind config
     you need to add the group-hover variant to scale and define your custom
     min width style.
  	 See https://codesandbox.io/s/tailwindcss-multilevel-dropdown-y91j7?file=/index.html
  	 for implementation with config file
  */
  .group:hover .group-hover\:scale-100 { transform: scale(1) }
  .group:hover .group-hover\:-rotate-180 { transform: rotate(180deg) }
  .scale-0 { transform: scale(0) }
  .min-w-32 { min-width: 8rem }
/* navbar css  */



/* here started the ready to renovate section  */
.ready-to-renovate{
  background-size: cover;
  background-color: black;
  position: relative;
}
.ready-to-renovate::before{
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-image: url(../img/ready-to-renovate-bg.png);
  opacity: 0.3;
}
/* here ended the ready to renovate section  */


@media only screen and (max-width: 768px) {
  .container-exceptional {
    width: 100%;
    margin: 0 auto 0 auto;
  }
  .container-general {
    width: 100%;
    margin: 0 auto 0 auto;
  }

  .hero-img {
    background-image: url("../img/hero-mobile.png");
    background-size: 100% 100%;
  }
}



/* image lazy loading section  */
/* .lazy {
  opacity: 0;
  transition: opacity 1s ease;
}

.lazy.loaded {
  opacity: 1;
} */

/* image lazy loading section  */


/* services css start here  */
.overlay-bg{
  background: rgb(0,0,0);
background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240, 239, 239, 0) 80%);
  opacity: 0.8;
}

.overlay-bg-radial{
  background: rgb(255,255,255);
  background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0,0,0,1) 100%);
  opacity: 0.8;
}

.outer-div{
  transition: all ease-in-out 1s;
}
.outer-div .inner-div{
  transition: all ease-in-out 0.6s;
}


.outer-div:hover .overlay{
  background: #000;
  opacity: 0.5;
}

.outer-div .overlay{
  
  position: absolute;
  content: "";
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  transition: 0.6s ease-in-out all;
}



.outer-div:hover .inner-div{
  z-index: 2;
  opacity: 1;
}

/* services css end here  */

